<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="playlist_maker">Playlist Maker</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="search_screen">Экран поиска</string>
    <string name="media_screen">Экран медиатеки</string>
    <string name="back_button_description">Назад</string>
    <string name="search_hint">Поиск</string>
    <string name="clear_search_description">Очистить поиск</string>
    <string name="search_icon_description">Иконка поиска</string>
    <string name="search_tab_description">Вкладка поиска</string>
    <string name="media_tab_description">Вкладка медиатеки</string>
    <string name="settings_tab_description">Вкладка настроек</string>
    <string name="empty_result_description">Нет результатов</string>
    <string name="empty_result_message">Ничего не нашлось</string>
    <string name="error_description">Ошибка</string>
    <string name="error_title">Проблемы со связью</string>
    <string name="error_message">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="retry_button">Обновить</string>
    <string name="history_title">История поиска</string>
    <string name="clear_history_description">Очистить историю</string>
    <string name="empty_history_description">История пуста</string>
    <string name="empty_history_message">История поиска пуста</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="search_hint_message">Вводите название трека на английском языке. Можно указать год для более точного поиска</string>
    <string name="player_screen">Аудиоплеер</string>
    <string name="track_name_placeholder">Название трека</string>
    <string name="artist_name_placeholder">Исполнитель</string>
    <string name="cover_description">Обложка альбома</string>
    <string name="more_button_description">Ещё</string>
    <string name="play_pause_description">Воспроизвести/Пауза</string>
    <string name="previous_track_description">Предыдущий трек</string>
    <string name="next_track_description">Следующий трек</string>
    <string name="share_button_description">Поделиться</string>
    <string name="add_to_playlist_description">Добавить в плейлист</string>
    <string name="add_to_favorite_description">В избранное</string>
    <string name="add_track_description">Добавить трек</string>
    <string name="like_track_description">Нравится</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_name_hint">Название*</string>
    <string name="playlist_description_hint">Описание</string>
    <string name="create_button">Создать</string>
    <string name="add_photo_description">Добавить фото</string>
    <string name="label_name">Название</string>
    <string name="label_description">Описание</string>
    <string name="label_playlist_name">Название плейлиста</string>
    <string name="label_playlist_description">Описание плейлиста</string>
</resources>