<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="14dp"
    android:paddingStart="8dp"
    android:paddingEnd="16dp"
    android:paddingBottom="@dimen/common_padding">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        tools:ignore="ExtraText,TextSizeCheck">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:background="@android:color/transparent"
            android:contentDescription="Назад"
            app:tint="#FF000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_title_text_size" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/settings_menu_item_margin_top"
        android:layout_marginBottom="@dimen/settings_menu_item_margin_bottom">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/dark_theme"
            android:textAppearance="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_menu_text_size"
            android:background="@android:color/transparent" />

        <Switch
            android:id="@+id/switchDarkTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:checked="false"
            android:layout_marginStart="24dp"
            tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/settings_menu_item_margin_bottom"
        android:layout_marginBottom="@dimen/settings_menu_item_margin_bottom">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/share_app"
            android:textAppearance="@string/share_app"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_menu_text_size"
            android:background="@android:color/transparent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            android:src="@drawable/light_mode_share" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/settings_menu_item_margin_bottom"
        android:layout_marginBottom="@dimen/settings_menu_item_margin_bottom">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/support"
            android:textAppearance="@string/support"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_menu_text_size"
            android:background="@android:color/transparent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            android:src="@drawable/light_mode_support" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/settings_menu_item_margin_bottom"
        android:layout_marginBottom="@dimen/settings_menu_item_margin_bottom">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/user_agreement"
            android:textAppearance="@string/user_agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_menu_text_size"
            android:background="@android:color/transparent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            android:src="@drawable/light_mode_arrow_right" />
    </LinearLayout>
</LinearLayout>


